--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
             <version>2.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>8.0.1</version>
+        </dependency>
 
     </dependencies>
 
